--- a/data/tabular/kcnq2_potassium_channel_butkiewicz/meta.yaml
+++ b/data/tabular/kcnq2_potassium_channel_butkiewicz/meta.yaml
@@ -14,8 +14,11 @@ targets:
       units:
       type: boolean
       names:
-          - noun: inhibitor of the kcnq2 potassium channel activity
-          - gerund: displaying activity against the kcnq2 potassium channel
+          - noun: inhibition of the kcnq2 potassium channel activity
+          - adjective: kcnq2 potassium channel inhibition
+          - gerund: inhibiting the activity of kcnq2 potassium channels
+          - verb: blocks kcnq2 potassium channels
+          - verb: inhibits kcnq2 potassium channels
       pubchem_aids:
           - 2239
           - 2287
@@ -88,3 +91,80 @@ bibtex:
       title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from
       the {P}ub{C}hem {D}atabase}},
       journal = {Chemical Science}}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that {#shows|exhibits|displays!} {activity_kcnq2_potassium_channel#no &NULL}{activity_kcnq2_potassium_channel__names__noun}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_kcnq2_potassium_channel__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result: {activity_kcnq2_potassium_channel#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_kcnq2_potassium_channel__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {activity_kcnq2_potassium_channel__names__gerund}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {activity_kcnq2_potassium_channel__names__gerund}?
+      Assistant: {activity_kcnq2_potassium_channel#No&Yes}, this molecule is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} {activity_kcnq2_potassium_channel__names__gerund}?
+      Assistant: {activity_kcnq2_potassium_channel#No&Yes}, it is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}?
+      Assistant: This is a molecule that is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {activity_kcnq2_potassium_channel#not &NULL}be {activity_kcnq2_potassium_channel__names__gerund}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {activity_kcnq2_potassium_channel#not &NULL}be {activity_kcnq2_potassium_channel__names__gerund}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {activity_kcnq2_potassium_channel__names__gerund}:<EOI> {activity_kcnq2_potassium_channel#no&yes}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_kcnq2_potassium_channel__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {activity_kcnq2_potassium_channel#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_kcnq2_potassium_channel__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result:<EOI> This molecule is {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}.
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {activity_kcnq2_potassium_channel__names__gerund}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {activity_kcnq2_potassium_channel%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%activity_kcnq2_potassium_channel%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {activity_kcnq2_potassium_channel#not &NULL}{activity_kcnq2_potassium_channel__names__gerund}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%activity_kcnq2_potassium_channel%}
+      Answer:<EOI> {%multiple_choice_result}
