feat: update templates ld50_zhu

--- a/data/tabular/ld50_zhu/meta.yaml
+++ b/data/tabular/ld50_zhu/meta.yaml
@@ -11,6 +11,8 @@ targets:
       type: continuous
       names:
           - noun: acute toxicity rat LD50
+          - noun: acute toxicity (LD50 in rats)
+          - noun: LD50 in rats
           - noun: rat LD50
       uris:
           - http://www.bioassayontology.org/bao#BAO_0002117
