--- a/data/tabular/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
+++ b/data/tabular/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
@@ -13,8 +13,8 @@ targets:
       units:
       type: boolean
       names:
-          - noun: a positive allosteric modulator of m1 muscarinic activity
-          - gerund: displaying positive allosteric modulation of the m1 muscarinic receptor
+          - noun: positive allosteric modulation of the M1 muscarinic receptor activity
+          - gerund: modulating the M1 muscarinic receptor activity in a positive allosteric way
       pubchem_aids:
           - 626
           - 1488
@@ -83,3 +83,80 @@ bibtex:
       title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets
       from the {P}ub{C}hem {D}atabase}},
       journal = {Chemical Science}}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {m1_muscarinic_agonist#no &NULL}{m1_muscarinic_agonist__names__noun}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule {#shows|exhibits|displays!} {m1_muscarinic_agonist#no &NULL}{m1_muscarinic_agonist__names__noun}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that {#shows|exhibits|displays!} {m1_muscarinic_agonist#no &NULL}{m1_muscarinic_agonist__names__noun}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {m1_muscarinic_agonist__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result: {m1_muscarinic_agonist#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {m1_muscarinic_agonist__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {m1_muscarinic_agonist__names__gerund}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {m1_muscarinic_agonist__names__gerund}?
+      Assistant: {m1_muscarinic_agonist#No&Yes}, this molecule is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} {m1_muscarinic_agonist__names__gerund}?
+      Assistant: {m1_muscarinic_agonist#No&Yes}, it is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}?
+      Assistant: This is a molecule that is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {m1_muscarinic_agonist#not &NULL}be {m1_muscarinic_agonist__names__gerund}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {m1_muscarinic_agonist#not &NULL}be {m1_muscarinic_agonist__names__gerund}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {m1_muscarinic_agonist__names__gerund}:<EOI> {m1_muscarinic_agonist#no&yes}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {m1_muscarinic_agonist__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {m1_muscarinic_agonist#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {m1_muscarinic_agonist__names__gerund}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result:<EOI> This molecule is {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}.
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {m1_muscarinic_agonist__names__gerund}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {m1_muscarinic_agonist%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%m1_muscarinic_agonist%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {m1_muscarinic_agonist#not &NULL}{m1_muscarinic_agonist__names__gerund}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%m1_muscarinic_agonist%}
+      Answer:<EOI> {%multiple_choice_result}
