feat: update yes no recoding nr_ahr_tox21

--- a/data/tabular/nr_ahr_tox21/meta.yaml
+++ b/data/tabular/nr_ahr_tox21/meta.yaml
@@ -17,7 +17,7 @@ targets:
           - adjective: toxic in the aryl hydrocarbon receptor assay
           - gerund: displaying toxicity in the NR-AhR assay
           - gerund: exhibiting toxicity in the NR-AhR assay
-          - gerund: demostrating toxicity in the NR-aryl hydrocarbon receptor assay
+          - gerund: demonstrating toxicity in the NR-aryl hydrocarbon receptor assay
       uris:
 benchmarks:
     - name: TDC
@@ -93,7 +93,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {toxicity_NR-AhR#not &NULL}be {toxicity_NR-AhR__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {toxicity_NR-AhR#not &NULL}{toxicity_NR-AhR__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {toxicity_NR-AhR__names__adjective}:<EOI> {toxicity_NR-AhR#yes&no}
+    - Is the {SMILES__description} {SMILES#} {toxicity_NR-AhR__names__adjective}:<EOI> {toxicity_NR-AhR#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {toxicity_NR-AhR__names__adjective}.
