--- a/data/tabular/nr_ar_lbd_tox21/meta.yaml
+++ b/data/tabular/nr_ar_lbd_tox21/meta.yaml
@@ -17,7 +17,7 @@ targets:
           - adjective: toxic in the androgen receptor ligand-binding domain assay
           - gerund: displaying toxicity in the NR-AR ligand binding domain assay
           - gerund: exhibiting toxicity in the NR-androgen-LBD receptor alpha assay
-          - gerund: demostrating toxicity in the NR-androgen-LBD receptor alpha assay
+          - gerund: demonstrating toxicity in the NR-androgen-LBD receptor alpha assay
       uris:
 benchmarks:
     - name: TDC
@@ -94,7 +94,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {toxicity_NR-AR-LBD#not &NULL}be {toxicity_NR-AR-LBD__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {toxicity_NR-AR-LBD#not &NULL}{toxicity_NR-AR-LBD__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {toxicity_NR-AR-LBD__names__adjective}:<EOI> {toxicity_NR-AR-LBD#yes&no}
+    - Is the {SMILES__description} {SMILES#} {toxicity_NR-AR-LBD__names__adjective}:<EOI> {toxicity_NR-AR-LBD#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {toxicity_NR-AR-LBD__names__adjective}.
