feat: update yes no recoding nr_ppar_gamma_tox21

--- a/data/tabular/nr_ppar_gamma_tox21/meta.yaml
+++ b/data/tabular/nr_ppar_gamma_tox21/meta.yaml
@@ -95,7 +95,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {toxicity_NR-PPAR-gamma#not &NULL}be {toxicity_NR-PPAR-gamma__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {toxicity_NR-PPAR-gamma#not &NULL}{toxicity_NR-PPAR-gamma__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {toxicity_NR-PPAR-gamma__names__adjective}:<EOI> {toxicity_NR-PPAR-gamma#yes&no}
+    - Is the {SMILES__description} {SMILES#} {toxicity_NR-PPAR-gamma__names__adjective}:<EOI> {toxicity_NR-PPAR-gamma#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {toxicity_NR-PPAR-gamma__names__adjective}.
