feat: update yes no recoding sarscov2_3clpro_diamond meta.yaml

--- a/data/tabular/sarscov2_3clpro_diamond/meta.yaml
+++ b/data/tabular/sarscov2_3clpro_diamond/meta.yaml
@@ -114,7 +114,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {activity_SARSCoV2_3CLPro#not &NULL}be {activity_SARSCoV2_3CLPro__names__gerund}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_SARSCoV2_3CLPro#not &NULL}{activity_SARSCoV2_3CLPro__names__gerund}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {activity_SARSCoV2_3CLPro__names__gerund}:<EOI> {activity_SARSCoV2_3CLPro#yes&no}
+    - Is the {SMILES__description} {SMILES#} {activity_SARSCoV2_3CLPro__names__gerund}:<EOI> {activity_SARSCoV2_3CLPro#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {activity_SARSCoV2_3CLPro__names__gerund}.
