feat: update yes no recoding sr_p53_tox21

--- a/data/tabular/sr_p53_tox21/meta.yaml
+++ b/data/tabular/sr_p53_tox21/meta.yaml
@@ -19,7 +19,7 @@ targets:
           - adjective: toxic in the SR-p53 assay
           - adjective: toxic in the SR-p53 response assay
           - adjective: toxic in the p53 response assay
-          - gerund: toxic activity in the SR-p53 assay
+          - gerund: showing SR-p53 toxicity
       uris:
 benchmarks:
     - name: TDC
@@ -95,7 +95,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {toxicity_SR-p53#not &NULL}be {toxicity_SR-p53__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {toxicity_SR-p53__names__adjective}:<EOI> {toxicity_SR-p53#yes&no}
+    - Is the {SMILES__description} {SMILES#} {toxicity_SR-p53__names__adjective}:<EOI> {toxicity_SR-p53#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {toxicity_SR-p53__names__adjective}.
